# ebookdroid-1.6.31

./: build - 副本.gradle  import-summary.txt  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/org/afzkl/colorpicker/: ColorPickerDialog.java
app/src/main/java/org/ebookdroid/: EBookDroidLibraryLoader.java
app/src/main/jni/: Application.mk  CMakeLists.txt
app/src/main/jni/djvu/: CMakeLists.txt  DjVuGlobal.h  DjVuPalette.cpp  GException.cpp  GString.h
app/src/main/jni/ebookdroid/: Android.mk  CMakeLists.txt  DjvuDroidBridge.cpp  PageCropper.c  bytebufferbitmapbridge.c  fb2droid.cpp  javahelpers.c  mupdfdroidbridge.c
app/src/main/jni/jpeg/: CMakeLists.txt
app/src/main/jni/mupdf/: CMakeLists.txt
app/src/main/jni/mupdf/mupdf/fitz/: res_pixmap.c
app/src/main/res/layout/: opdsitem.xml  recent.xml
app/src/main/res/layout-v11/: recent.xml
app/src/main/res/values/: service_dimens.xml
